--- a/inventory.ini
+++ b/inventory.ini
@@ -9,7 +9,7 @@
 [app]       #group of servers/nodes
 172.31.25.72
 
-[all:childern]      #group of groups
+[all:children]      #group of groups
 web
 db
 app
