--- a/inventory.ini
+++ b/inventory.ini
@@ -3,6 +3,16 @@
 [web]       #group of servers/nodes
 172.31.25.70
 
+[web:vars]
+DB_URL="http://db.pspkdevops.online"
+
+[localhost]
+localhost
+
+[localhost:vars]
+course="DevOps"
+institute="Joindevops"
+
 [db]        #group of servers/nodes
 172.31.25.71
 
