--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,7 @@
-172.31.25.73       ##unlisted/ungrouped
+172.31.29.190       ##unlisted/ungrouped
 
 [web]       #group of servers/nodes
-172.31.25.70
+172.31.29.187    #this is ansible node privateIP and will change whenever we create new instances in aws.
 
 [web:vars]
 DB_URL="http://db.pspkdevops.online"
@@ -14,10 +14,10 @@ course="DevOps"
 institute="Joindevops"
 
 [db]        #group of servers/nodes
-172.31.25.71
+172.31.29.188
 
 [app]       #group of servers/nodes
-172.31.25.72
+172.31.29.189
 
 [all:children]      #group of groups
 web
