--- a/inventory.ini
+++ b/inventory.ini
@@ -10,8 +10,9 @@ DB_URL="http://db.pspkdevops.online"
 localhost
 
 [localhost:vars]
-course="DevOps"
+#course="DevOps"
 institute="Joindevops"
+COURSE="Master Cloud and DevOps from inventory"
 
 [db]        #group of servers/nodes
 172.31.29.188
