ansible vars-args-preference

--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -12,5 +12,5 @@
   - name: check preference
     vars: 
       COURSE: "Python from TASK variable"
-    ansible.buildin.debug:
+    ansible.builtin.debug:
       msg: "Hello welcome to {{COURSE}}"
