--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -5,7 +5,7 @@
   - name: check user exists or not
     ansible.builtin.command: id expense
     register: USER
-    ignore_errors: true
+    #ignore_errors: true
 
   - name: print user information
     ansible.builtin.debug:
