--- a/13-conditions.yaml
+++ b/13-conditions.yaml
@@ -6,11 +6,11 @@
     private: no
   tasks:
   - name: number is less than 10
-    ansbile.builtin.debug:
+    ansible.builtin.debug:
       msg: "Give number {{number}} is less than 10"
     when: number | int < 10       # converting/manipulating string to integer
 
   - name: number is greater than or equal to 10
-    ansbile.builtin.debug:
+    ansible.builtin.debug:
       msg: "Give number {{number}} is greater than or equal to 10"
     when: number | int >= 10      # converting/manipulating string to integer
