--- a/17-loops.yaml
+++ b/17-loops.yaml
@@ -5,7 +5,7 @@
   - name: install packages
     ansible.builtin.dnf:
       name: "{{ item.name }}"
-      state: ""{{ item.state }}""
+      state: "{{ item.state }}"
     loop:
     - { name: 'mysql', state: 'absent'} #item-1
     - { name: 'nginx', state: 'latest'} #item-2
